# zephyr-v2.3.99

./: west.yml
samples/net/sockets/blinky/: CMakeLists.txt  overlay-ot.conf  prj.conf
samples/net/sockets/blinky/src/: main.c  main.c-old2  main_old.c
samples/net/sockets/blinky/src/mqtt-sn/: mqttsn_client.c  mqttsn_client.h  mqttsn_gateway_discovery.c  mqttsn_packet_fifo.c  mqttsn_packet_receiver.c  mqttsn_packet_sender.c  mqttsn_platform.c  mqttsn_transport_ot.c
samples/net/sockets/coap_client/: overlay-ot.conf  prj.conf
samples/net/sockets/coap_client/src/: coap-client.c
subsys/net/l2/openthread/: openthread.c
